chore: harden app security and clean repository